package ThucHanh_Practice.CA1;

public interface Listener <T>{
    void onEvent(T data);
}
